# Fastapi_OAuth2_Hashing-password_JWT-token

./: README.md  docker-compose.yaml  pyproject.toml
postgres/: Dockerfile  pg_hba.conf
src/: .env.template  loader.py
src/alembic/: env.py
src/alembic/versions/: 2024_12_07_1812-3319671d109f_init_revision.py  2024_12_07_2057-89388ee2fcdb_init.py
src/api/: v1.py
src/auth/: __init__.py  routers.py  schemas.py  utils.py
src/config/: config.py
src/core/: fastapi_factory.py
src/dao/: base_model.py  models.py
src/database/: database.py  utils.py
src/dto/passwords/: schemas.py  utils.py
src/dto/users/: routers.py  schemas.py  utils.py
src/loggers/: loggers.py
src/templates/: auth.html
tests/: conftest.py
tests/routes/: conftest.py  test_routes.py
